--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <title>Demo App</title>
+    <title>Api Calendar</title>
 </head>
 <body>
     <h1>Api Calendar-back-end Victor</h1>
