Cambiando nombre del aplicativo

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <title>Api Calendar</title>
+    <title>Api Evec</title>
 </head>
 <body>
-    <h1>Api Calendar-back-end Victor</h1>
+    <h1>Api Evec-back-end Victor</h1>
 </body>
 </html>
